--- a/docker/kubez-keepalived/keepalived.conf
+++ b/docker/kubez-keepalived/keepalived.conf
@@ -1,14 +1,31 @@
+#vrrp_script 主要使keepalived监测业务判断需不需要切换vip
+vrrp_script checkhaproxy
+{
+    script "sh /etc/keepalived/mycheckscript.sh"
+    interval 3
+    weight -20
+}
 vrrp_instance MAIN {
   state MASTER
+  #ens192 可改为实际机器端口
   interface ens192
+  #50 默认50即可
   virtual_router_id 50
+  #200 为权重比,backup需比200低
   priority 200
+  #设置了nopreempt，即使恢复也不会抢占master
+  #nopreempt
   advert_int 1
   authentication {
+    #认证密码默认即可
     auth_type PASS
     auth_pass pwd1
   }
   virtual_ipaddress {
+    #VIP 地址
     10.10.33.35
+  }
+  track_script {
+    checkhaproxy
   }
 }
